--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,8 @@
     "express": "^4.18.2",
     "node-fetch": "^3.3.0",
     "stream-chat": "^8.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.31.0"
   }
 }
