--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
-	"type": "module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"start": "set NODE_ENV=dev && node src/index.js"
+    "start": "set NODE_ENV=dev && node src/index.js"
   },
   "keywords": [
     "gptchat"
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^3.3.0",
+    "openai": "^3.1.0",
     "stream-chat": "^8.2.1"
   },
   "devDependencies": {
